ono-tebe-nado v1.0.2

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </ul>
     </nav>
     <div class="header__logo">
-      <img src="./images/logo-black.svg" alt="Логотип">
+      <a href="#"><img src="./images/logo-black.svg" alt="Логотип"></a>
     </div>
     <address class="header__address">
       <a class="address" href="tel:+99995555555">+9 999 555 5555</a>
@@ -27,6 +27,7 @@
       <p class="address">наб. Принсенграхт 263- 265, Амстердам</p>
     </address>
   </header> 
+  <main>
   <section class="cover">
     <div class="overlay cover__overlay">
     </div>
@@ -126,6 +127,7 @@
       </div>
     </div>
   </section>
+  </main>
   <footer class="footer">
     <address class="footer__address address">
       <a class="address" href="tel:+99995555555">+9 999 555 5555</a>
