ono-tebe-nado v1.0.3

--- a/index.html
+++ b/index.html
@@ -37,7 +37,9 @@
       <span class="cover__title_span-right cover__title_span-extraspacing">н<span class="cover__title_span-normalspacing">ад</span><span class="cover__title_span-nospacing">о</span></span>
     </h1>
     <h2 class="cover__subtitle">
-      Аукцион вещей, <span class="cover__subtitle-extraspacing">в</span>которые никто не верил<button class="cover__subtitle_button"><a class="cover__subtitle_link" href="">Сделать ставку</a></button>
+    Аукцион вещей, <span class="cover__subtitle-extraspacing"
+    >в</span>которые никто не верил
+    <button class="cover__subtitle_button">Сделать ставку</button>
     </h2>
   </section>
   <section class="lots">
