ono-tebe-nado v1.0.5

--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
       <span>лоты</span>
     </h2>
     <div class="lots__cards">
-      <div class="lots__card lots__lot1 overlay lots__card_overlay">
+      <div class="lots__card lots__lot1">
+        <div class="overlay lots__card_overlay"></div>
         <h3 class="lots__cards_title lots__card_text">
           Фильм режиссёра, который бросил киношколу
         </h3>
@@ -55,7 +56,8 @@
           Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?
         </span>
       </div>
-      <div class="lots__card lots__lot2 overlay">
+      <div class="lots__card lots__lot2">
+        <div class="overlay lots__card_overlay"></div>
         <h3 class="lots__cards_title lots__card_text">
           Книга, где описан один скучный день из жизни рекламного агента
         </h3>
@@ -65,7 +67,8 @@
             И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса Джойса?
         </span>
       </div>
-      <div class="lots__card lots__lot3 overlay">
+      <div class="lots__card lots__lot3">
+        <div class="overlay lots__card_overlay"></div>
         <h3 class="lots__cards_title lots__card_text">
           Картина, которую повторит даже 5-летний сын маминой подруги
         </h3>
