--- a/index.html
+++ b/index.html
@@ -11,146 +11,38 @@
   </head>
  <body>
   <header class="header">
-    <nav class="menu">
-      <ul class="header__menu">
-        <li class="active__link"><a class="active__link" href="#">главная</a></li>
-        <li><a href="#">просмотреть лоты</a></li>
-        <li><a href="#">об аукционе</a></li>
+    <nav>
+      <ul class="menu header__menu">
+        <li class="menu__item-nostyle"><a class="link-active" href="#">главная</a></li>
+        <li><a class="link" href="#">просмотреть лоты</a></li>
+        <li><a class="link" href="#">об аукционе</a></li>
       </ul>
     </nav>
-    <div class="header__logo">
-      <a href="#"><img src="./images/logo-black.svg" alt="Логотип"></a>
-    </div>
-    <address class="header__address">
-      <a class="address" href="tel:+99995555555">+9 999 555 5555</a>
-      <a class="address" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
-      <p class="address">наб. Принсенграхт 263- 265, Амстердам</p>
+    <a href=""><img class="header__logo" src="./images/logo-black.svg" alt=""></a>
+    <address class="address">
+      <a class="link" href="tel:+99995555555">+9 999 555 5555</a>
+      <a class="link" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+      <p>наб. Принсенграхт 263- 265, Амстердам</p>
     </address>
-  </header> 
+  </header>
   <main>
-  <section class="cover">
-    <div class="overlay cover__overlay">
-    </div>
-    <h1 class="cover__title">
-      <span class="cover__title_span-left">о<span class="cover__title_span-extraspacing">но</span></span>
-      <span class="cover__title_span-center">те<span class="cover__title_span-extraspacing">бе</span></span>
-      <span class="cover__title_span-right cover__title_span-extraspacing">н<span class="cover__title_span-normalspacing">ад</span><span class="cover__title_span-nospacing">о</span></span>
-    </h1>
-    <h2 class="cover__subtitle">
-    Аукцион вещей, <span class="cover__subtitle-extraspacing"
-    >в</span>которые никто не верил
-    <button class="cover__subtitle_button">Сделать ставку</button>
-    </h2>
-  </section>
-  <section class="lots">
-    <h2 class="lots__title">
-      <span>лоты</span>
-    </h2>
-    <div class="lots__cards">
-      <div class="lots__card lots__lot1">
-        <div class="overlay lots__card_overlay"></div>
-        <h3 class="lots__cards_title lots__card_text">
-          Фильм режиссёра, который бросил киношколу
-        </h3>
-        <span class="lots__cards_subtitle lots__card_text">
-          Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?
+    <section class="cover">
+      <div class="overlay">
+      <div class="cover__title">
+        <span class="cover__title-left"
+        >о<span class="cover__title-extraspacing"
+        >но</span>
         </span>
+        <span class="cover__title-center">те<span class="cover__title-extraspacing">бе</span></span>
+        <span class="cover__title-right cover__title-extraspacing">н<span class="cover__title-spacing">ад</span><span class="cover__title-nospacing">о</span></span>
       </div>
-      <div class="lots__card lots__lot2">
-        <div class="overlay lots__card_overlay"></div>
-        <h3 class="lots__cards_title lots__card_text">
-          Книга, где описан один скучный день из жизни рекламного агента
-        </h3>
-        <span class="lots__cards_subtitle lots__card_text">
-          Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на древнеанглийский.
-           В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная с античных времён.
-            И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса Джойса?
-        </span>
+      <p class="cover__subline">Аукцион вещей, <span class="cover__subline_span"
+        >в</span>которые никто не верил<button class="cover__subline_button">сделать ставку</button></p>
       </div>
-      <div class="lots__card lots__lot3">
-        <div class="overlay lots__card_overlay"></div>
-        <h3 class="lots__cards_title lots__card_text">
-          Картина, которую повторит даже 5-летний сын маминой подруги
-        </h3>
-        <span class="lots__cards_subtitle lots__card_text">
-          Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку.
-           Никаких полей, лесов, котиков... Сколько бы вы на такое поставили, если бы не знали, что это — одна из революционных работ Кандинского?
-        </span>
-      </div>
-    </div>
-    <p class="lots__subline">посмотреть больше</p>
-  </section>
-  <section class="about">
-    <div class="about__column_image">
-      <img class="about__image" src="./images/logo-white.svg" alt="">
-    </div>
-    <div class="about__column">
-      <h4 class="about__title">об аукционе</h4>
-      <div  class="about__column_text">
-        <p class="about__column_text-spacing"
-        >Здесь вы не встретите очередное <span class="about__column_text-nospacing"
-        >пафосное собрание невероятно дорогого антиквариата.</span>
-        <span class="about__column_text-extraspacing2"
-        >Наши</span>
-        лоты вообще не
-        <span class="about__column_text-nospacing"
-        >должны</span>
-        <span class="about__column_text-negativespacing"
-        >были попасть</span>
-        <span class="about__column_text-nospacing"
-        >ни на один</span>
-        аукцион.
-        <span class="about__column_text-nospacing"
-        >Потому что кому нужен</span>
-        <span class="about__column_text-extraspacing3"
-        >дневник</span>
-        <span class="about__column_text-nospacing"
-        >девочки-подростка или картина, которую может</span>
-        <span class="about__column_text-extraspacing2"
-        >нарисовать</span>
-        даже
-        <span class="about__column_text-nospacing"
-        >ребёнок? Кому нужны</span>
-        все эти странные вещи, созданные
-        <span class="about__column_text-nospacing"
-        >любителями?</span>
-        </p>
-        <p class="about__column_text-nospacing"
-        >Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. Непринятые и непонятые. Когда-то
-        <span class="about__column_text-extraspacing4"
-        >они</span>
-        казались просто
-        <span class="about__column_text-spacing"
-        >неудачными.</span>
-        Но, несмотря на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно
-        <span class="about__column_text-spacing"
-        >представить современную культуру.</span>
-        Когда в эти вещи не верил никто, продолжали верить
-        <span class="about__column_text-spacing"
-        >их создатели.</span> И сейчас эти лоты стали культовыми. 
-        </p>
-      </div>
-    </div>
-  </section>
+    </section>
+    <section class="lots"></section>
+    <section class="about"></section>
   </main>
-  <footer class="footer">
-    <address class="footer__address address">
-      <a class="address" href="tel:+99995555555">+9 999 555 5555</a>
-      <a class="address" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
-      <p class="address">наб. Принсенграхт 263- 265, Амстердам</p>
-    </address>
-    <nav class="menu">
-      <ul class="footer__menu">
-        <li class="active__link"><a class="active__link" href="#">главная</a></li>
-        <li><a href="#">просмотреть лоты</a></li>
-        <li><a href="#">об аукционе</a></li>
-      </ul>
-    </nav>
-    <div class="social">
-      <img class="social__image" src="./images/yt.svg" alt="">
-      <img class="social__image" src="./images/vk.svg" alt="">
-      <img class="social__image" src="./images/pinterest.svg" alt="">
-    </div>
-  </footer>
+  <footer></footer>
  </body>
 </html>
