--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <li><a class="link" href="#">об аукционе</a></li>
       </ul>
     </nav>
-    <a href=""><img class="header__logo" src="./images/logo-black.svg" alt=""></a>
+    <a href=""><img class="header__logo" src="./images/logo-black.svg" alt="Логотип"></a>
     <address class="address">
       <a class="link" href="tel:+99995555555">+9 999 555 5555</a>
       <a class="link" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
@@ -27,7 +27,6 @@
   </header>
   <main>
     <section class="cover">
-      <div class="overlay">
       <div class="cover__title">
         <span class="cover__title-left"
         >о<span class="cover__title-extraspacing"
@@ -38,9 +37,41 @@
       </div>
       <p class="cover__subline">Аукцион вещей, <span class="cover__subline_span"
         >в</span>которые никто не верил<button class="cover__subline_button">сделать ставку</button></p>
-      </div>
+      <div class="overlay"></div>
     </section>
-    <section class="lots"></section>
+    <section class="lots">
+      <h2 class="lots__title"
+      лоты></h2>
+      <div class="lots__cards">
+        <a class="lots__card_film lots__card" href="#">
+          <div class="lots__card_text">
+            <h3 class="lots__card_title">Фильм режиссёра, который бросил киношколу</h3>
+            <p class="lots__card_subtitle">Не просто бросил, а ушёл с первой лекции. Какой была бы ваша ставка, если бы вы не знали, что режиссёр — Пол Томас Андерсон?</p>
+          </div>
+          <div class="overlay"></div>
+        </a>
+        <a class="lots__card_book lots__card" href="#">
+          <div class="lots__card_text">
+            <h3 class="lots__card_title">Книга, где описан один скучный день из жизни рекламного агента</h3>
+            <p class="lots__card_subtitle"
+            >Объёмом почти в тысячу страниц. Иногда без знаков препинания и с переходами на древнеанглийский. 
+            В ней одновременно рассказывается о 16 июня 1904 года и об истории литературы, начиная с античных времён. 
+            И это всё накладывается на эпическую поэму Гомера. Сколько бы вы поставили на «Улисса» Джеймса Джойса?</p>
+         </div>
+         <div class="overlay"></div>
+        </a>
+        <a class="lots__card_picture lots__card" href="#">
+          <div class="lots__card_text">
+            <h3 class="lots__card_title">Картина, которую повторит даже 5-летний сын маминой подруги</h3>
+            <p class="lots__card_subtitle"
+            >Ну действительно, там линия, тут кружочек, а здесь и вовсе что-то похожее на инфузорию-туфельку. 
+            Никаких полей, лесов, котиков... Сколько бы вы на такое поставили, если бы не знали, что это — одна из революционных работ Кандинского?</p>
+          </div>
+          <div class="overlay"></div>
+        </a>
+      </div>
+      <a class="lots__subline" href="#">посмотреть больше</a>
+    </section>
     <section class="about"></section>
   </main>
   <footer></footer>
