--- a/index.html
+++ b/index.html
@@ -14,11 +14,11 @@
     <nav>
       <ul class="menu header__menu">
         <li class="menu__item-nostyle"><a class="link-active" href="#">главная</a></li>
-        <li><a class="link" href="#">просмотреть лоты</a></li>
+        <li><a class="link" href="#">посмотреть лоты</a></li>
         <li><a class="link" href="#">об аукционе</a></li>
       </ul>
     </nav>
-    <a href=""><img class="header__logo" src="./images/logo-black.svg" alt="Логотип"></a>
+    <a href="#"><img class="header__logo" src="./images/logo-black.svg" alt="Логотип"></a>
     <address class="address">
       <a class="link" href="tel:+99995555555">+9 999 555 5555</a>
       <a class="link" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
@@ -41,7 +41,7 @@
     </section>
     <section class="lots">
       <h2 class="lots__title"
-      лоты></h2>
+      >лоты</h2>
       <div class="lots__cards">
         <a class="lots__card_film lots__card" href="#">
           <div class="lots__card_text">
@@ -70,10 +70,47 @@
           <div class="overlay"></div>
         </a>
       </div>
-      <a class="lots__subline" href="#">посмотреть больше</a>
+      <p class="lots__subline"><a class="lots__subline_link" href="#">посмотреть больше</a></p>
     </section>
-    <section class="about"></section>
+    <section class="about">
+      <div class="about__column_logo">
+        <img class="about__column_image" src="./images/logo-white.svg" alt="Логотип">
+      </div>
+      <div class="about__column_text">
+        <h2 class="about__title">об аукционе</h2>
+        <div class="about__description">
+          <p class="about__description-extraspacing"
+          >Здесь вы не встретите очередное пафосное собрание невероятно дорогого антиквариата. 
+          Наши лоты вообще не должны были попасть ни на один аукцион. 
+          Потому что кому нужен дневник девочки-подростка или картина, которую может нарисовать даже ребёнок? 
+          Кому нужны все эти странные вещи, созданные любителями?</p>
+          <p
+          >Слишком сложные или, наоборот, слишком простые. Опережающие своё время. В пух и прах растерзанные критиками. 
+          Непринятые и непонятые. Когда-то они казались просто неудачными. Но, несмотря
+          на критику, кажущуюся простоту или сложность, сейчас без этих лотов невозможно представить современную культуру. 
+          Когда в эти вещи не верил никто, продолжали верить их создатели. И сейчас эти лоты стали культовыми. </p>
+        </div>
+      </div>
+    </section>
   </main>
-  <footer></footer>
+  <footer class="footer">
+    <address class="address address__footer">
+      <a class="link" href="tel:+99995555555">+9 999 555 5555</a>
+      <a class="link" href="mailto:info@sobaka.ge">info@sobaka.ge</a>
+      <p>наб. Принсенграхт 263- 265, Амстердам</p>
+    </address>
+    <nav>
+      <ul class="menu footer__menu">
+        <li class="menu__item-nostyle"><a class="link-active" href="#">главная</a></li>
+        <li><a class="link" href="#">посмотреть лоты</a></li>
+        <li><a class="link" href="#">об аукционе</a></li>
+      </ul>
+    </nav>
+    <div class="social">
+      <a href="#"><img class="social__image" src="./images/yt.svg" alt="Ютуб"></a>
+      <a href="#"><img class="social__image" src="./images/vk.svg" alt="ВК"></a>
+      <a href="#"><img class="social__image" src="./images/pinterest.svg" alt="Пинтерест"></a>
+    </div>
+  </footer>
  </body>
 </html>
