--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
   </header>
   <main>
     <section class="cover">
-      <div class="cover__title">
+      <h1 class="cover__title">
         <span class="cover__title-left"
         >о<span class="cover__title-extraspacing"
         >но</span>
         </span>
         <span class="cover__title-center">те<span class="cover__title-extraspacing">бе</span></span>
         <span class="cover__title-right cover__title-extraspacing">н<span class="cover__title-spacing">ад</span><span class="cover__title-nospacing">о</span></span>
-      </div>
+      </h1>
       <p class="cover__subline">Аукцион вещей, <span class="cover__subline_span"
         >в</span>которые никто не верил<button class="cover__subline_button">сделать ставку</button></p>
       <div class="overlay"></div>
