ono-tebe-nado v3.1

--- a/index.html
+++ b/index.html
@@ -35,8 +35,11 @@
         <span class="cover__title-center">те<span class="cover__title-extraspacing">бе</span></span>
         <span class="cover__title-right cover__title-extraspacing">н<span class="cover__title-spacing">ад</span><span class="cover__title-nospacing">о</span></span>
       </h1>
-      <p class="cover__subline">Аукцион вещей, <span class="cover__subline_span"
-        >в</span>которые никто не верил<button class="cover__subline_button">сделать ставку</button></p>
+      <div class="cover__subline">
+        <p class="cover__subline_text">Аукцион вещей, <span class="cover__subline_span"
+        >в</span>которые никто не верил</p>
+        <button class="cover__subline_button">сделать ставку</button>
+      </div>
       <div class="overlay"></div>
     </section>
     <section class="lots">
