ono-tebe-nado v3.2

--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
           <div class="overlay"></div>
         </a>
       </div>
-      <p class="lots__subline"><a class="lots__subline_link" href="#">посмотреть больше</a></p>
+      <a class="lots__subline_link lots__subline" href="#">посмотреть больше</a>
     </section>
     <section class="about">
       <div class="about__column_logo">
